# Auditarr

./: .dockerignore  .env.example  .gitignore  AUDIT.md  CHANGELOG.md  Dockerfile  Makefile  PLAN.md  README.md  SECURITY.md  STATE.md  auth.py  checks.py  db.py  deps.py  docker-compose.yml  install-bare-metal.sh  install-docker.sh  install.sh  scanner.py  server.py  updater.py
backend/: .env.example  README.md  alembic.ini  pyproject.toml
backend/app/: __init__.py  cli.py  main.py  worker.py  worker_sse.py
backend/app/api/: auth_deps.py  dependencies.py  errors.py  middleware.py  websocket.py
backend/app/automation/: __init__.py  catalogue.py  cron.py  jobs.py  scheduler.py  types.py
backend/app/core/: __init__.py  exceptions.py  http.py  log_buffer.py  logging.py  registry.py  runtime_settings_schema.py  settings.py  sse.py  ssl_bundle.py
backend/app/documentation/: __init__.py  loader.py  search.py  service.py  types.py
backend/app/events/: __init__.py  bus.py  types.py
backend/app/housekeeping/: __init__.py  service.py
backend/app/integrations/: __init__.py  discovery.py  manager.py  path_mapping.py  tag_sync.py  types.py
backend/app/models/: __init__.py  audit_log.py  extension_rule.py  housekeeping_run.py  integration.py  job_run.py  library.py  media.py  notification_channel.py  notification_delivery.py  optimization.py  optimization_profile.py  password_reset.py  path_mapping.py  playback.py  playback_device.py  plugin_settings.py  rule.py  rule_evaluation.py  rule_notification_window.py  rule_suggestion.py  rule_template.py  runtime_setting.py  scan_run.py  schedule.py  session.py  tag.py  update_apply.py  update_check.py  user.py  vt_queue.py
backend/app/notifications/: __init__.py  dispatcher.py  manager.py  templating.py  types.py
backend/app/optimization/: __init__.py  ffmpeg_runner.py  hwaccel.py  poller.py  profile_schema.py  worker.py
backend/app/plugins/: __init__.py  contracts.py  gallery.py  loader.py
backend/app/rules/: __init__.py  builtin.py  evaluator.py  language_normalize.py  schema.py
backend/app/scheduler/: __init__.py
backend/app/schemas/: __init__.py  auth.py  automation.py  (+10 more)
backend/migrations/: env.py
backend/tests/: conftest.py
(+712 files in other folders)
