[project]
name = "auditarr"
version = "1.8.2"
description = "Auditarr — media library auditor (next gen)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Auditarr Maintainers" }]

dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "gunicorn>=23.0.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy[asyncio]>=2.0.36",
  "alembic>=1.13.0",
  "asyncpg>=0.30.0",
  "aiosqlite>=0.20.0",
  "redis>=5.2.0",
  "arq>=0.26.0",
  "argon2-cffi>=23.1.0",
  "pyjwt>=2.9.0",
  "httpx>=0.27.0",
  # v1.7.2: certifi is a transitive dep of httpx, but on hosts
  # where the package was somehow uninstalled (apt upgrade, manual
  # pip uninstall, broken venv rebuild) httpx fails with an
  # opaque ``FileNotFoundError`` at first AsyncClient construction.
  # Pinning it explicitly makes the dependency visible to ``pip
  # install -e .`` and to deployment tooling that audits the
  # requirements set.
  "certifi>=2024.0",
  "structlog>=24.4.0",
  "python-multipart>=0.0.12",
  "websockets>=13.1",
  "anyio>=4.6.0",
  "rich>=13.9.0",
  "typer>=0.13.0",
  "jinja2>=3.1.4",
  "email-validator>=2.2.0",
  "tenacity>=9.0.0",
  "watchfiles>=0.24.0",
  "pyyaml>=6.0.2",
  "markdown-it-py>=3.0.0",
  "cryptography>=43.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
  "httpx>=0.27.0",
  "ruff>=0.7.0",
  "mypy>=1.13.0",
  "types-redis",
]

[project.scripts]
auditarr = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "S", "ASYNC", "RUF"]
ignore = ["S101", "S104"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S", "B"]
"app/cli.py" = ["B008"]

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy"]
exclude = ["migrations/"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra --strict-markers"
